# MoAI

./: README.md
versions/v.0.1.6/: .gitignore  CMakeLists.txt  README.md  build.md  codebase_analysis.md  history.md  profiling.jsonl  todo.md
versions/v.0.1.6/config/: default.conf
versions/v.0.1.6/config/vocabularies/: language.conf
versions/v.0.1.6/data/architecture/: architecture.txt  art_deco.txt  gothic.txt  greek_architecture.txt  green_buildings.txt  islamic_architecture.txt  japanese_architecture.txt  modernism.txt  roman_architecture.txt  skyscrapers.txt
versions/v.0.1.6/data/astronomy/: big_bang.txt  black_holes.txt  constellations.txt  exoplanets.txt  galaxies.txt  moon.txt  solar_system.txt  space_exploration.txt  stars.txt  telescopes.txt
versions/v.0.1.6/data/biology/: animals.txt  cell_biology.txt  ecology.txt  evolution.txt  genetics.txt  human_body.txt  marine_biology.txt  microbiology.txt  photosynthesis.txt
versions/v.0.1.6/data/chemistry/: acids_bases.txt  biochemistry.txt  chemical_reactions.txt  gases.txt  metals_alloys.txt  nuclear_chemistry.txt  organic_chemistry.txt  periodic_table.txt  plastics_polymers.txt  water.txt
versions/v.0.1.6/data/computer_science/: cloud_computing.txt  machine_learning.txt  operating_systems.txt  software_engineering.txt
versions/v.0.1.6/data/economics/: banking_finance.txt  cryptocurrency.txt  gdp_growth.txt  globalization.txt  international_trade.txt  poverty_inequality.txt  supply_demand.txt  taxation.txt  unemployment.txt
versions/v.0.1.6/data/engineering/: 3d_printing.txt  aerospace.txt  bridges.txt  civil_engineering.txt  nuclear_power.txt  renewable_energy.txt  robotics.txt  solar_energy.txt  telecommunications.txt
versions/v.0.1.6/data/geography/: deserts.txt  earthquakes.txt  japan.txt  mountains.txt  oceans.txt  rainforests.txt  rivers.txt  volcanoes.txt
versions/v.0.1.6/data/health/: cancer.txt  cardiovascular.txt  diabetes.txt  exercise_fitness.txt  infectious_diseases.txt  mental_health.txt  nutrition.txt  sleep_health.txt  vaccines.txt
versions/v.0.1.6/data/history/: age_of_exploration.txt  ancient_china.txt  ancient_egypt.txt  ancient_greece.txt  ancient_rome.txt  cold_war.txt  french_revolution.txt  industrial_revolution.txt  renaissance.txt  world_war_2.txt
versions/v.0.1.6/data/law/: constitutional_law.txt  contract_law.txt  criminal_law.txt  cyber_law.txt  environmental_law.txt  intellectual_property.txt  international_law.txt  labor_law.txt  legal_systems.txt  privacy_law.txt  tort_law.txt
versions/v.0.1.6/data/linguistics/: historical_linguistics.txt  human_language.txt  language_acquisition.txt  morphology.txt  phonetics.txt  pragmatics.txt  semantics.txt  sociolinguistics.txt  syntax.txt  translation.txt  writing_systems.txt
versions/v.0.1.6/data/mathematics/: calculus.txt  cryptography.txt  differential_equations.txt  geometry.txt  graph_theory.txt  history_of_mathematics.txt  linear_algebra.txt  number_theory.txt  probability_statistics.txt  set_theory.txt
versions/v.0.1.6/data/misc/: chess.txt  coffee.txt  internet.txt  olympics.txt  paper.txt  photography.txt  printing_books.txt  time_calendars.txt
versions/v.0.1.6/tests/: benchmark.sh  test_qa_integration.sh
(+303 files in other folders)
